LavidaCraft 1.11
Added:
 - Added support for the Respackopts mod. (Java)
 - Dragon Egg textures and custom model. Only partial support exists for the new textures in the Bedrock version.
 - Custom models for light emitting blocks that make them appear more glowy in the inventory similar to how they appear in Bedrock. (Java)
Updated:
 - Honey Bottle texture to be more distinct from potions, and more in-line with Vanilla's style.
 - Dragon Breath. No longer has transparency and has been improved slightly.
 - Experience Bottle. Now matches Vanilla style better.
 - Enderman texture. Overhauled appearance.
Technical:
 - Removed interpolation from torch and soul torch animations as it caused strange artifacts in the UI. This should not greatly effect the appearance of these items. (Java)
 - Removed unnecessary frame order from redstone ore animations. (Bedrock)
 - Added face culling to the bottom of torches. (Java)
 - Added face culling to the top of potted cacti. (Java)
Fixed:
 - Glowstone is now actually updated. I'm not sure why it didn't work last update.
 - Fixed a clipping issue on potions. (Java)
Removed:
 - Chicken textures. They will be available as a minipack on my Modrinth page.

LavidaCraft 1.10
Added:
 - Brewing Fuel and Potion slot textures for Brewing Stand UI. (Java)
Updated:
 - Sugar texture. Smaller and matches Minecraft's style better.
 - Kelp Block texture.
 - Lily Pad texture.
 - Pack format to 1.21.5.
 - Glowstone.
 - Glowstone Dust.
 - Redstone Ore, Deepslate Redstone Ore, and Redstone Torch textures.
Removed:
 - Brewing Stand UI texture as it was longer necessary. This will break some backwards compatibility. (Java)
 - Terrain_texture.json since it was unused. (Bedrock)
Fixed:
 - Chorus Flower and Dead Chorus Flower block models. Scaling issues. (Java)
Technical:
 - Gave Rail Fix textures their own namespace. (Java)
 - Gave LavidaCraft specific textures their own namespace. (Java)