@@ -1,0 +1,3 @@
+{
+    "condition": "lavidacraft.blocks.dragonEggEmission & lavidacraft.blocks.dragonEgg"
+}
