@@ -1,15 +1,0 @@
-{
-    "gui": {
-        "scaling": {
-            "type": "nine_slice",
-            "width": 200,
-            "height": 20,
-            "border": {
-                "left": 20,
-                "top": 4,
-                "right": 20,
-                "bottom": 4
-            }
-        }
-    }
-}
