@@ -1,3 +1,0 @@
-{
-    "condition": "lavidacraft.gui.highlightedButtons"
-}
